--- a/main/templates/main/user_list.html
+++ b/main/templates/main/user_list.html
@@ -1,18 +1,3 @@
-<!-- <!DOCTYPE html>
-<html>
-<head>
-    <title>User List</title>
-</head>
-<body>
-    <h1>User List</h1>
-    <ul>
-        {% for user in users %}
-            <li>Username: {{ user.username }}, Email: {{ user.email }},reqCount: {{user.reqcount}}</li>
-        {% endfor %}
-    </ul>
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -22,17 +7,14 @@
             border-collapse: collapse;
             width: 50%;
         }
-
         th, td {
             border: 1px solid #c2b8b8;
             padding: 8px;
             text-align: center;
         }
-
         tr:nth-child(even) {
             background-color: #f2f2f2;
         }
-
         th {
             background-color: #a291eb;
             color: rgb(12, 11, 11);
@@ -47,6 +29,7 @@
                 <th>Username</th>
                 <th>Email</th>
                 <th>Request Count</th>
+                <th>Total Cost</th>
             </tr>
         </thead>
         <tbody>
@@ -54,7 +37,8 @@
                 <tr>
                     <td>{{ user.username }}</td>
                     <td>{{ user.email }}</td>
-                    <td>{{ user.reqcount }}</td>
+                    <td>{{ user.reqCount }}</td>
+                    <td>{{user.totalCost}}</td>
                 </tr>
             {% endfor %}
         </tbody>
