--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -15,7 +15,7 @@
                         <a class="nav-link" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/profile">Profile</a>
+                        <a class="nav-link" href="/api/cost/">Cost API</a>
                     </li>
                 </ul>
             </div>
