--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,5 +1,16 @@
 {% extends 'main/base.html'%}
 {% block title  %}Home Page {%endblock%}
 {%block content %}
-<h1>Wellcome !</h1>
+<form method="post" action="{% url 'home' %}">
+    {% csrf_token %}
+    <div class="text-center" style="margin-top: 100px;">
+      <h1>Welcome!</h1>
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-success">Add Request</button>
+      </div>
+    </div>
+  </form>
 {%endblock%}
+
+
+  
